# awwlib-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_STYLE.md  INSPIRATION.md  LICENSE  README.md  RESEARCH.md  awwy.ps1  build-debug-on-linux.sh  build-debug-on-windows.cmd  build-release-on-linux.sh  build-release-on-windows.cmd  docfx.json
.github/workflows/: ci.yml
app/: main.cpp
cmake/: Doctest.cmake
docs/: 404.html  index.html  index.json  manifest.json  sitemap.xml
docs/assets/css/: styles.67c8814f.css
docs/assets/js/: 0058b4c6.c6da411f.js  0e384e19.a80d13c4.js  17896441.d16907de.js  1df93b7f.e8000fc1.js  1f391b9e.99b9d466.js  393.3dc17843.js  393be207.d8add35d.js  5e95c892.31cd2ed2.js  a7456010.c06413d7.js  a7bd4aaa.a165f15c.js  a94703ab.5854f444.js  aba21aa0.d060f6d0.js  common.944a116d.js  main.12d79339.js  main.2aec04d1.js  runtime~main.f8f689fc.js
docs/docs/: getting-started.html  introduction.html
docs/docs/intro/: index.html
docs/markdown-page/: index.html
include/: example.h
include/aww-collection/: aww-collection.hpp
include/aww-configuration-value-objects/: aww-configuration-value-objects.hpp
include/aww-html/: aww-html.hpp
include/aww-os/: aww-os.hpp
include/aww-pubsub/: aww-pubsub.hpp
include/aww-result/: aww-result.hpp
include/aww-string/: aww-string.hpp
include/aww-value-objects/: aww-value-objects.hpp
libawwy/: Create-MDTREE.ps1  Generate-Files.ps1  Get-GitUnpushedChanges.ps1  Get-Platform.ps1  Invoke-Build.ps1  Invoke-ClangFormatAutofix.ps1
src/: example.cpp
src/aww-collection/: aww-collection.cpp
src/aww-configuration-value-objects/: aww-configuration-value-objects.cpp
src/aww-html/: aww-html.cpp
src/aww-os/: aww-os-linux.cpp  aww-os-windows.cpp  aww-os.cpp
src/aww-pubsub/: aww-pubsub.cpp
src/aww-result/: aww-result.cpp
src/aww-string/: aww-string.cpp
src/aww-value-objects/: aww-value-objects.cpp
tests/: CMakeLists.txt  dummy.cpp
tests/aww-collection/: aww-collection.cpp
tests/aww-configuration-value-objects/: aww-configuration-value-objects-tests.cpp
tests/aww-html/: aww-html-tests.cpp
tests/aww-os/: aww-os-tests.cpp  aww-os.cpp
tests/aww-pubsub/: aww-pubsub-tests.cpp
tests/aww-result/: aww-result-tests.cpp  aww-result.cpp
tests/aww-string/: aww-string-tests.cpp
tests/aww-value-objects/: aww-value-objects-tests.cpp  aww-value-objects.cpp
tests/external-sol/: external-sol2-tests.cpp
tests/external-tidy/: external-tidy-tests.cpp
tests/external-utf8proc/: external-utf8proc-tests.cpp
website/: docusaurus.config.ts  package-lock.json  package.json  package.json.md  test_pandoc-installer-wrapper.js
website/docs/: intro.md
website/my-modules/pandoc-installer-wrapper/: .gitignore  package.json
website/my-modules/pandoc-installer-wrapper/lib/: index.d.ts  index.js
website/my-modules/pandoc-installer-wrapper/scripts/: install-pandoc.js
website/static/: CNAME
